# api-auth

./: api.py  app.py  app_2.py  pyproject.toml  teste_falha_requisicao.py
templates/: index.html  protected.html
